# Generated/Models/GetAccountInfoOKResponse.cs
@@ -1,0 +1,57 @@
+// Code generated by Microsoft (R) AutoRest Code Generator 1.0.1.0
+// Changes may cause incorrect behavior and will be lost if the code is
+// regenerated.
+
+namespace DigiCertSharp.Models
+{
+    using Newtonsoft.Json;
+    using System.Linq;
+
+    /// <summary>
+    /// AccountBalance
+    /// </summary>
+    public partial class GetAccountInfoOKResponse
+    {
+        /// <summary>
+        /// Initializes a new instance of the GetAccountInfoOKResponse class.
+        /// </summary>
+        public GetAccountInfoOKResponse()
+        {
+          CustomInit();
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the GetAccountInfoOKResponse class.
+        /// </summary>
+        /// <param name="apiPermissions">ApiPermissions</param>
+        public GetAccountInfoOKResponse(double? accountBalance = default(double?), GetAccountInfoOKResponseApiPermissions apiPermissions = default(GetAccountInfoOKResponseApiPermissions), string apiUserRole = default(string))
+        {
+            AccountBalance = accountBalance;
+            ApiPermissions = apiPermissions;
+            ApiUserRole = apiUserRole;
+            CustomInit();
+        }
+
+        /// <summary>
+        /// An initialization method that performs custom operations like setting defaults
+        /// </summary>
+        partial void CustomInit();
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "account_balance")]
+        public double? AccountBalance { get; set; }
+
+        /// <summary>
+        /// Gets or sets apiPermissions
+        /// </summary>
+        [JsonProperty(PropertyName = "api_permissions")]
+        public GetAccountInfoOKResponseApiPermissions ApiPermissions { get; set; }
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "api_user_role")]
+        public string ApiUserRole { get; set; }
+
+    }
+}
