# Generated/Models/GetAccountInfoOKResponseApiPermissions.cs
@@ -1,0 +1,45 @@
+// Code generated by Microsoft (R) AutoRest Code Generator 1.0.1.0
+// Changes may cause incorrect behavior and will be lost if the code is
+// regenerated.
+
+namespace DigiCertSharp.Models
+{
+    using Newtonsoft.Json;
+    using System.Linq;
+
+    /// <summary>
+    /// ApiPermissions
+    /// </summary>
+    public partial class GetAccountInfoOKResponseApiPermissions
+    {
+        /// <summary>
+        /// Initializes a new instance of the
+        /// GetAccountInfoOKResponseApiPermissions class.
+        /// </summary>
+        public GetAccountInfoOKResponseApiPermissions()
+        {
+          CustomInit();
+        }
+
+        /// <summary>
+        /// Initializes a new instance of the
+        /// GetAccountInfoOKResponseApiPermissions class.
+        /// </summary>
+        public GetAccountInfoOKResponseApiPermissions(int? allowEv = default(int?))
+        {
+            AllowEv = allowEv;
+            CustomInit();
+        }
+
+        /// <summary>
+        /// An initialization method that performs custom operations like setting defaults
+        /// </summary>
+        partial void CustomInit();
+
+        /// <summary>
+        /// </summary>
+        [JsonProperty(PropertyName = "allow_ev")]
+        public int? AllowEv { get; set; }
+
+    }
+}
